# VaultKeeper

./: CHANGELOG.md  Cargo.toml  MAKEFILE  Makefile  README.md  flake.nix  vaultkeeper.service  vaultkeeper.timer
.github/workflows/: release.yaml
bak/: parse_args.rs
src/: diagnostics.rs  main.rs  utils.rs
src/backup/: attachments.rs  config_file.rs  controller.rs  database.rs  icon_cache.rs  mod.rs  rsa_keys.rs  sends.rs  utils.rs
src/sysops/: installer.rs  mod.rs  scheduler.rs
test/: config.json
