[package]
name = "vaultwarden-backup-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
clap-nested = "0.4.0"
color-eyre = "0.6.2"
env_logger = "0.10.1"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["macros"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time", "local-time"] }

